--- a/base/package.json
+++ b/base/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "am-setup",
+	"name": "am-base",
 	"version": "0.0.0",
 	"description": "A basic setup using HTML5 Boilerplate and gulp.js.",
 	"main": "index.js",
