Add custom plugin
This reverts commit bda4ef1b87992929129d97b7cefaa73283bd47d9.

--- a/wordpress/.gitignore
+++ b/wordpress/.gitignore
@@ -10,13 +10,10 @@ sitemap.xml.gz
 # Folders
 wp-admin/
 wp-includes/
-wp-content/*
-!wp-content/plugins
-!wp-content/themes
+wp-content/
 
-# Plugins
-wp-content/plugins/*
-!wp-content/plugins/custom-stuff/
+# Plugin exceptions
+# !plugins/test
 
-# Themes
-wp-content/themes/*
+# Theme exceptions
+# !themes/test
