--- a/wordpress/package.json
+++ b/wordpress/package.json
@@ -26,7 +26,8 @@
 		"gulp-autoprefixer": "^3.1.0",
 		"gulp-concat": "^2.6.0",
 		"gulp-cssnano": "^2.1.1",
+		"gulp-debug": "^2.1.2",
 		"gulp-sass": "^2.2.0",
 		"gulp-uglify": "^1.5.2"
-	}	
+	}
 }
