--- a/wordpress/.gitignore
+++ b/wordpress/.gitignore
@@ -21,3 +21,5 @@ wp-content/plugins/*
 # Themes
 wp-content/themes/*
 !wp-content/themes/ambase/
+wp-content/themes/ambase/assets/images
+dev/themes/ambase/assets/images
