--- a/wordpress/.gitignore
+++ b/wordpress/.gitignore
@@ -17,6 +17,7 @@ wp-content/*
 # Plugins
 wp-content/plugins/*
 !wp-content/plugins/custom-stuff/
+!wp-content/plugins/owl-post/
 
 # Themes
 wp-content/themes/*
