--- a/wordpress/.gitignore
+++ b/wordpress/.gitignore
@@ -10,14 +10,14 @@ sitemap.xml.gz
 # Folders
 wp-admin/
 wp-includes/
-wp-content/*
-!wp-content/plugins
-!wp-content/themes
+wp-content/
+
+# WP Content
 
 # Plugins
-wp-content/plugins/*
 !wp-content/plugins/custom-stuff/
+!wp-content/plugins/custom-stuff/**/
 
 # Themes
-wp-content/themes/*
 !wp-content/themes/ambase/
+!wp-content/themes/ambase/**/
